--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                
             </div>
             <div class="contact-right">
-                <form action="">
+                <form action="/action_page.html">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
