changes required done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  
 <div id="about">
     <h1>About Me</h1>
-    <p>A data scientist that appreciates working remotely with a team to provide insights through data, and who has some expertise using the Python programming language, data analytics tools, and libraries like pandas and matplotlib working with different tech development teams is something I enjoy, and I always try to benefit the group.</p>
+    <p><span>A data scientist that appreciates working remotely with a team to provide insights through data, and who has some expertise using the Python programming language, data analytics tools, and libraries like pandas and matplotlib working with different tech development teams is something I enjoy, and I always try to benefit the group.</span></p>
 
 </div>
 <div id="grid-layout-33">
