--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
                 <h1 class ="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-envelope"></i>rratsethana@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i>081-559-9837</p>
+
                 <div class="social-icons">
                     <a href="https://www.facebook.com/rendmo.ratsethana" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/rendani-ratsethana-a6725516b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    
+                    <a href=https://github.com/rendanirA target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
                 
             </div>
