--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 <div id="header">
     <div class="container">
-        <nav>
+        <nav id="navbar">
             <img src=" images/logo.png" alt="logo of the site" class="logo">
-            <ul>
+            <ul id="menu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -126,17 +126,20 @@
 
 
 </script>
+<script src="https://code.jquery.com/jquery-3.6.3.js"></script>
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbx6Q6SWyiuH4zr48bjw2ej1s00aFxuKSQ1cHJGZJ1SeZnv3i-46NkIKwDGSDMwNDcU/exec'
-    const form = document.forms['submit-to-google-sheet']
-  
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => console.log('Success!', response))
-        .catch(error => console.error('Error!', error.message))
-    })
-  </script>
+    $(window).scroll(function(){
+        if($(window).scrollTop()){
+            $("nav").addClass("black");
+        }
+        else{
+            $("nav").removeClass("black");  
+        }
+    });
+</script>
+
+
+
 <script>
     document.getElementById("form").addEventListener("submit", function(event) {
   event.preventDefault();
