added bold text

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <i class="fas fa-code"></i>
         <h3>Skills</h3>
         <ul>
-            <li><span>Data Science</span><br>Data analysis using numpy and pandas.</li>
-            <li><span>Python</span><br>Object orientated programming and functional programming.</li>
-            <li><span>Git and Git hub</span><br>Git version control.</li>
+            <li><span STYLE="font-weight:bold">Data Science</span><br>Data analysis using numpy and pandas.</li>
+            <li><span STYLE="font-weight:bold">Python</span><br>Object orientated programming and functional programming.</li>
+            <li><span STYLE="font-weight:bold">Git and Git hub</span><br>Git version control.</li>
         </ul>
     </div>
 
@@ -58,9 +58,9 @@
         <i class="fas fa-object-group"></i>
         <h3>Education</h3>
         <ul>
-            <li><span>2022-2023</span><br>National Certificate in Information Technology
+            <li><span STYLE="font-weight:bold">2022-2023</span><br>National Certificate in Information Technology
                 (System Development) (SAQA ID 48872) from Umuzi Academy.</li>
-            <li><span>2015</span><br>Matric certificate from Liivha Combined school.</li>
+            <li><span STYLE="font-weight:bold">2015</span><br>Matric certificate from Liivha Combined school.</li>
             
         </ul>
     </div>
