changes made to file

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
     <div>
         <i class="fas fa-code"></i>
         <h3>Skills</h3>
-        <ul>
-            <li><span STYLE="font-weight:bold">Data Science</span><br>Data analysis using numpy and pandas.</li>
-            <li><span STYLE="font-weight:bold">Python</span><br>Object orientated programming and functional programming.</li>
-            <li><span STYLE="font-weight:bold">Git and Git hub</span><br>Git version control.</li>
-        </ul>
+        <dl>
+            <dt><span STYLE="font-weight:bold">Data Science</span></dt>
+            <dd>- Data analysis using numpy and pandas.</dd>
+            <dt><span STYLE="font-weight:bold">Python</span></dt>
+            <dd>- Object orientated programming and functional programming.</dd>
+            <dt><span STYLE="font-weight:bold">Git and Git hub</span></dt>
+            <dd>- Git version control.</dd>
+        </dl>
     </div>
 
     <div>
@@ -57,12 +60,14 @@
     <div>
         <i class="fas fa-object-group"></i>
         <h3>Education</h3>
-        <ul>
-            <li><span STYLE="font-weight:bold">2022-2023</span><br>National Certificate in Information Technology
-                (System Development) (SAQA ID 48872) from Umuzi Academy.</li>
-            <li><span STYLE="font-weight:bold">2015</span><br>Matric certificate from Liivha Combined school.</li>
+        <dl>
+            <dt><span STYLE="font-weight:bold">2022-2023</span></dt>
+            <dd>- National Certificate in Information Technology
+                (System Development) (SAQA ID 48872) from Umuzi Academy.</dd>
+            <dt><span STYLE="font-weight:bold">2015</span></dt>
+            <dd>- Matric certificate from Liivha Combined school.</dd>
             
-        </ul>
+            </dl>
     </div>
 
 </div>
